# cmake_template_prj

./: .gitignore  CMakeLists.txt  config_folder_and_run_cmake.bat.example
src/: CMakeLists.txt  simple_library.cpp  simple_library.h
src/tests/: CMakeLists.txt  tests.cpp
